syntax = "proto3";

// proto 包名
package api;
// goctl rpc protoc interact.proto --go_out=. --go-grpc_out=. --zrpc_out=. --client=true
// 生成 golang 代码后的包名
option go_package = "pb/interact";

// 查询交互计数请求
message QueryInteractionReq {
    string Biz = 1;   //业务类型
    int64 BizId = 2;  //id
    int64  Uid = 3;  //用户id
}

message QueryInteractionsReq {
  string Biz = 1;   //业务类型
  repeated int64 BizIds = 2;  //id
}

// 增加阅读量请求
message AddReadCntReq {
  string Biz = 1;   //业务类型
  int64 BizId = 2;  //id
}


message InteractionResult {
    int64 BizId = 1;
    int64 ReadCnt = 2;
    int64 CollectCnt = 3;
    int64 LikeCnt = 4;
    bool  IsLiked = 5;
    bool  IsCollected = 6;
}

message InteractionsInfo {
  repeated InteractionResult interactions = 1; // InteractionResult 的列表
}

message TopLikeResp {
  repeated int64 Items = 1;
}

message TopLikeReq {
  string Biz = 1;   //业务类型
}

message CommonResult {
  string Msg = 1;
}


// 定义 Greet 服务
service Interaction {
  rpc QueryInteractionInfo(QueryInteractionReq) returns (InteractionResult);
  rpc QueryInteractionsInfo(QueryInteractionsReq) returns (InteractionsInfo);

  rpc IncreReadCnt(AddReadCntReq) returns(CommonResult);
  rpc TopLike(TopLikeReq) returns(TopLikeResp);
}